--- a/practicalwork/pr13072/pr13072.csproj
+++ b/practicalwork/pr13072/pr13072.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EED4F8A4-1F13-467C-822B-0B38412798FB}</ProjectGuid>
+    <ProjectGuid>{F72914C9-B64B-4848-86D8-BAE70F386C9B}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>cw</RootNamespace>
-    <AssemblyName>cw</AssemblyName>
+    <RootNamespace>pr13072</RootNamespace>
+    <AssemblyName>pr13072</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
